--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "django-cors-headers>=4.7.0",
     "djoser>=2.3.3",
     "pre-commit>=4.2.0",
+    "psycopg2-binary>=2.9.11",
     "python-dotenv>=1.0.0",
 ]
 
